translate with i18next auth views and profile view

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -796,6 +796,7 @@
     "We were unable to find a registered user with this email address.": "We were unable to find a registered user with this email address.",
     "We will send a receipt download link to the email addresses that you specify below. You may separate multiple email addresses using commas.": "We will send a receipt download link to the email addresses that you specify below. You may separate multiple email addresses using commas.",
     "We're lost in space. The page you were trying to view does not exist.": "We're lost in space. The page you were trying to view does not exist.",
+    "Welcome": "Welcome",
     "Welcome Back!": "Welcome Back!",
     "Western Sahara": "Western Sahara",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.",
