modularize delete diaog in permission and user and translate views

--- a/resources/js/i18n/locales/en/translation.json
+++ b/resources/js/i18n/locales/en/translation.json
@@ -214,6 +214,7 @@
     "Delete Selected": "Delete Selected",
     "Delete Team": "Delete Team",
     "Denmark": "Denmark",
+    "Description": "Description",
     "Detach": "Detach",
     "Detach Resource": "Detach Resource",
     "Detach Selected": "Detach Selected",
