--- a/resources/js/i18n/locales/es/translation.json
+++ b/resources/js/i18n/locales/es/translation.json
@@ -216,6 +216,7 @@
     "Delete Selected": "Eliminar seleccionado",
     "Delete Team": "Borrar equipo",
     "Denmark": "Dinamarca",
+    "Description": "Descripción",
     "Detach": "Desvincular",
     "Detach Resource": "Desvincular recurso",
     "Detach Selected": "Desvincular selección",
